<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_INJ" Id="{b0e309d1-2282-43cb-a77d-1c68f1ea549b}">
    <Declaration><![CDATA[	VAR_GLOBAL
		
//GVL_Devices
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VCN:40 '}
	VCN_40 : FB_VCN;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VGP:40 '}
	VGP_40 : FB_VGP;
	
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:80 '}
	VVC_80:FB_VVC;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:81 '}
	VVC_81:FB_VVC;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:82 '}
	VVC_82:FB_VVC;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:83 '}
	VVC_83 : FB_VVC;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:84 '}
	VVC_84 : FB_VVC;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:85 '}
	VVC_85 : FB_VVC;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:VVC:86 '}
	VVC_86 : FB_VVC;
	

	{attribute 'pytmc' :=' pv: EM1K0:GMD:GCM:80 '}
	GCM_80: FB_GCM;
	
	{attribute 'pytmc' :=' pv: EM1K0:GMD:INJ_Override '}
	xOverrideMode : BOOL:= false;
	
	(*Additional VCN Interlock*)
	{attribute 'pytmc' :=' pv:  EM1K0:GMD:VCN_ILK;
    field: ZNAM FALSE; 
	 field: ONAM TRUE; 
	 io: io;
	 '}
	bAdditionalVCNIlk : BOOL; 
		
//GVL_Sensors

(*Pressure Meter*)
	{attribute 'pytmc' :=' pv: EM1K0:GMD:GFM:86 '}
	GFM_86 :FB_PressureTransducer;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:GFM:85 '}
	GFM_85 :FB_PressureTransducer;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:GFM:84 '}
	GFM_84 :FB_PressureTransducer;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:GFM:83 '}
	GFM_83 :FB_PressureTransducer;	

(*HV*)
	{attribute 'pytmc' :=' pv: EM1K0:GMD:PSV:1 '}
	hv1 : FB_HighVoltage;
	// {attribute 'pytmc' :=' pv: EM1K0:GMD:HV:2 '}
	// hv2 : FB_HighVoltage;
	{attribute 'pytmc' :=' pv: EM1K0:GMD:RTD:1 '}
	RTD : FB_RTD;
	
	
(* Pressure Control*)
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCP:40 '}
	GCP: ST_VG;
{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:SP;
	field: HOPR 1000;
	field: LOPR 0;
	field: PREC 2;
	field: EGU "TORR";
	'}
	fSetpointValue :REAL; 
	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:GO;
	 field: ZNAM STOP; 
	 field: ONAM START; 
	 io: io;
	'}
	bGo: BOOL:=FALSE; 
 	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:RESET;
	 field: ZNAM FALSE; 
	 field: ONAM TRUE; 
	 io: io;
	 '}
	bReset : BOOL; 
	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:ERROR;
    field: ZNAM FALSE; 
	 field: ONAM TRUE; 
	 io: io;
	 '}
	bError : BOOL; 
	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:Kp1 '}
	fKp1 : REAL:= 0.5; 
	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:Tn1 '}
	fTn1 : REAL:= 0.5; 
	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:Kp2 '}
	fKp2 : REAL:= 0.01; 
	{attribute 'pytmc' :=' pv: EM1K0:GMD:CNTRL:Tn2 '}
	fTn2 : REAL:= 0.5; 
	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>